hms-backend/force-app/main/default/objects/Billing__c/Billing__c.object-meta.xml
<CustomObject>
    <description>Stores billing and invoice information for appointments.</description>
    <label>Billing</label>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Billing ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>