hms-backend/force-app/main/default/objects/Billing__c/validationRules/Amount_Required_When_Paid.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Required_When_Paid</fullName>
    <active>true</active>
    <description>Total Amount is required when Status is set to Paid.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, 'Paid'),
    OR(
        ISNULL(Total_Amount__c),
        Total_Amount__c &lt;= 0
    )
)</errorConditionFormula>
    <errorMessage>Total Amount must be greater than zero when Status is Paid.</errorMessage>
</ValidationRule>